--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,6 +144,7 @@ color: #fff !important;
 display: flex;
 align-items: flex-end;
 padding: 0.5rem 1.5rem;
+position: relative !important ;
 
 }
 
@@ -159,3 +160,179 @@ padding: 0.5rem 1.5rem;
 .btn-icone-menu:focus{
     box-shadow: 0 0 0 0.25rem #fff;
 }
+
+.menu-overlay{
+    position:fixed;
+    overflow: hidden;
+height: 0vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff !important;
+    transition: .6s;
+    z-index: 2000;
+}
+
+.menu-overlay-content{
+    position: relative;
+    top: 25%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.menu-overlay-link{
+    color: #000;
+    font-family: var(--dm-sans-regular);
+    font-size: 18px;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+
+}
+
+.menu-overlay-link:hover{
+    color: var(--color-primary);
+
+}
+
+.menu-overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    cursor: pointer !important;
+  }
+
+  .menu-overlay-title{
+      margin-right: -3rem;
+    transform: rotate(90deg);
+  }
+
+
+  .hero-image{
+      width: 100%;
+  }
+
+
+  .hero-big-circle,.hero-medium-circle, .hero-small-circle{
+      position: absolute;
+      z-index: -1;
+  }
+
+  .hero-big-circle{
+    top: -2rem;
+    right: 0rem;
+    height: 117px;
+
+  }
+
+  .hero-medium-circle{
+    top: 16rem;
+    left: 0rem;
+    height: 100px;
+
+  }
+
+  .hero-small-circle{
+    bottom: 17rem;
+    right: 1rem;
+    height: 30px;
+
+  }
+
+  .hero-container{
+    padding: 1.5rem 2rem 1.5rem 1.5rem;
+    overflow: hidden;
+  }
+
+  .hero-title-block{
+    position: absolute;
+    bottom: 7%;
+    padding: 1.5rem;
+    padding-left:  11.5rem;
+  }
+
+.hero-see-more{
+    padding-top: 8rem;
+    padding-right: 11rem;
+}
+
+
+.container-custom{
+    padding: 4rem 3rem 4rem 2.5rem;
+}
+
+.container-about{
+    padding: 4rem 3rem 4rem 6.5rem;
+}
+
+.profile-image-container{
+    width: 370px;
+    height: 450px;
+}
+.profile-image{
+    width: 100%;
+   height: 100%;
+    object-fit: cover;
+}
+
+
+.img-news{
+    height: 30px;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+.news-big-circle,.news-medium-circle, .news-small-circle{
+    position: absolute;
+}
+
+.news-big-circle{
+    bottom: -1rem;
+    right: 0rem;
+    height: 117px;
+  }
+
+  .news-medium-circle{
+    top: -2rem;
+    left: -1rem;
+    height: 99px;
+
+  }
+
+  .news-small-circle{
+    bottom: 4rem;
+    left: 5rem;
+    height: 30px;
+  }
+
+  .p-news{
+    padding-top: 4rem!important;
+    padding-bottom: 4rem!important;
+  }
+
+
+  .img-join-1, .img-join-2{
+      width: 350px;
+      height: 350px;
+      object-fit: cover;
+  }
+
+  .img-join-2{
+    position: absolute;
+    bottom: 7rem;
+    right: 2rem;
+  }
+
+
+  .container-join-me{
+    padding: 5rem 3rem 5rem 6.5rem;
+  }
+
+  .join-box img{
+    position: absolute;
+    top: 1.2rem;
+    right: 1.2rem;
+    height: 20px;
+  }
