Integration maquette vue mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,7 +110,7 @@ body {
     background-color: var(--color-tertiary) !important;
 }
 
-.bg-black{
+.bg-black {
     background-color: #000 !important;
 }
 
@@ -152,10 +152,10 @@ body {
     font-size: 1rem !important;
 }
 
-.join-box:hover{
+.join-box:hover {
     background-color: var(--color-secondary);
     color: var(--color-primary) !important;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .icone-menu {
@@ -172,7 +172,7 @@ body {
     height: 0vh;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     background-color: #fff !important;
     transition: 0.6s;
     z-index: 2000;
@@ -181,7 +181,7 @@ body {
 .menu-overlay-content {
     position: relative;
     top: 25%;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: space-between;
 }
@@ -327,7 +327,7 @@ body {
     right: 17rem;
 }
 
-@media screen and (max-width:1350px) {
+@media screen and (max-width: 1350px) {
     .img-join-2 {
         position: absolute;
         bottom: 3rem;
@@ -339,15 +339,13 @@ body {
     padding: 5rem 3rem 5rem 6.5rem;
 }
 
-.rotate-icone{
+.rotate-icone {
     transform: rotate(-45deg);
 }
 
 .menu-overlay-link.active {
     color: var(--color-primary);
 }
-
-
 
 .iframe-videos {
     width: 100%;
@@ -364,8 +362,7 @@ body {
     border: 1px solid #000;
 }
 
-.btn-wb-light:hover,
-.btn-wb-light:focus {
+.btn-wb-light:hover {
     background-color: #000;
     color: #fff;
 }
@@ -380,14 +377,12 @@ body {
     border: 1px solid #fff;
 }
 
-.btn-wb-dark:hover,
-.btn-wb-dark:focus {
+.btn-wb-dark:hover {
     background-color: #fff;
     color: #000;
 }
 
-
-.container-wb{
+.container-wb {
     width: 100%;
     padding-right: var(--bs-gutter-x, 0.75rem);
     padding-left: var(--bs-gutter-x, 0.75rem);
@@ -396,50 +391,47 @@ body {
 }
 
 @media (min-width: 576px) {
-    .container-wb{
-      max-width: 340px;
+    .container-wb {
+        max-width: 100vw;
     }
-  }
-  @media (min-width: 768px) {
-    .container-wb{
-      max-width: 520px;
+}
+@media (min-width: 768px) {
+    .container-wb {
+        max-width: 520px;
     }
-  }
-  @media (min-width: 992px) {
-    .container-wb{
-      max-width: 760px;
+}
+@media (min-width: 992px) {
+    .container-wb {
+        max-width: 760px;
     }
 
     .card-videos {
         width: 380px;
         height: 200px;
     }
-  }
-  @media (min-width: 1200px) {
-    .container-wb{
-      max-width: 940px;
+}
+@media (min-width: 1200px) {
+    .container-wb {
+        max-width: 940px;
     }
 
     .card-videos {
         width: 400px;
         height: 280px;
     }
-  }
-  @media (min-width: 1400px) {
-     .container-wb{
-      max-width: 1120px;
+}
+@media (min-width: 1400px) {
+    .container-wb {
+        max-width: 1120px;
     }
 
     .card-videos {
         width: 500px;
         height: 380px;
     }
+}
 
-  }
-
-
-
-.container-section{
+.container-section {
     width: 100%;
     padding-right: var(--bs-gutter-x, 0.75rem);
     padding-left: var(--bs-gutter-x, 0.75rem);
@@ -448,34 +440,32 @@ body {
 }
 
 @media (min-width: 576px) {
-    .container-section{
-      max-width: 420px;
+    .container-section {
+        max-width: 420px;
     }
-  }
-  @media (min-width: 768px) {
-    .container-section{
-      max-width: 600px;
+}
+@media (min-width: 768px) {
+    .container-section {
+        max-width: 600px;
     }
-  }
-  @media (min-width: 992px) {
-    .container-section{
-      max-width: 840px;
+}
+@media (min-width: 992px) {
+    .container-section {
+        max-width: 840px;
     }
-  }
-  @media (min-width: 1200px) {
-    .container-section{
-      max-width: 1020px;
+}
+@media (min-width: 1200px) {
+    .container-section {
+        max-width: 1020px;
     }
-  }
-  @media (min-width: 1400px) {
-     .container-section{
-      max-width: 1200px;
+}
+@media (min-width: 1400px) {
+    .container-section {
+        max-width: 1200px;
     }
-  }
+}
 
-
-
- .container-title{
+.container-title {
     width: 100%;
     padding-right: var(--bs-gutter-x, 0.75rem);
     padding-left: var(--bs-gutter-x, 0.75rem);
@@ -486,32 +476,30 @@ body {
 }
 
 @media (min-width: 576px) {
-    .container-title{
-      max-width: 495px;
+    .container-title {
+        max-width: 495px;
     }
-  }
-  @media (min-width: 768px) {
-    .container-title{
-      max-width: 675px;
+}
+@media (min-width: 768px) {
+    .container-title {
+        max-width: 675px;
     }
-  }
-  @media (min-width: 992px) {
-    .container-title{
-      max-width: 915px;
+}
+@media (min-width: 992px) {
+    .container-title {
+        max-width: 915px;
     }
-  }
-  @media (min-width: 1200px) {
-    .container-title{
-      max-width: 1095px;
+}
+@media (min-width: 1200px) {
+    .container-title {
+        max-width: 1095px;
     }
-  }
-  @media (min-width: 1400px) {
-     .container-title{
-      max-width: 1275px;
+}
+@media (min-width: 1400px) {
+    .container-title {
+        max-width: 1275px;
     }
-  }
-
-
+}
 
 .title-big-circle,
 .title-medium-circle,
@@ -538,8 +526,7 @@ body {
     height: 45px;
 }
 
-
-.card-price{
+.card-price {
     height: 510px;
     width: 33.33333333333%;
     border: none !important;
@@ -547,60 +534,57 @@ body {
     padding: 1rem;
 }
 
-.card-price-header{
+.card-price-header {
     display: block;
     position: absolute;
     top: 0;
     padding: 2.5rem 1rem;
 }
 
-.card-price-footer{
+.card-price-footer {
     display: block;
     position: absolute;
     bottom: 0;
     padding: 2.5rem 1rem;
 }
 
-.container-img-started-about{
+.container-img-started-about {
     width: 30%;
     height: 400px;
 }
-.container-img-ressource-about{
+.container-img-ressource-about {
     width: 40%;
     height: 450px;
 }
-.container-img-ressource-methods{
+.container-img-ressource-methods {
     width: 90% !important;
     height: 15rem;
     overflow: hidden;
 }
 
-
-.img-started-about{
+.img-started-about {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-.line-height-1{
+.line-height-1 {
     line-height: 27px;
 }
 
-.line-height-2{
+.line-height-2 {
     line-height: 36px;
 }
 
-
-.opactity-60{
-    opacity: .6 !important;
+.opactity-60 {
+    opacity: 0.6 !important;
 }
 
-.p-ressource-about{
+.p-ressource-about {
     padding: 5rem !important;
 }
 
-
-.step-circle{
+.step-circle {
     height: 50px;
     width: 50px;
     border-radius: 40px;
@@ -611,18 +595,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
-.taining-hero-img{
+.taining-hero-img {
     width: 250px;
     height: 350px;
     background-color: #000;
     margin-left: 1.5rem;
 }
 
-.history-deco::before{
-    content: '';
+.history-deco::before {
+    content: "";
     display: block;
     position: absolute;
     bottom: 9px;
@@ -632,72 +615,241 @@ body {
     background-color: #fff;
 }
 
-.card-history-img{
-    height: 250px;
-    width: 250px;
-    position: relative;
-    z-index: 1;
+
+.bg-step-1 {
+    background-color: #fafafa;
 }
 
-.card-history-img img{
-    height: 100% !important;
-    width: 100% !important;
-  object-fit: cover;
+.bg-step-2 {
+    background-color: #f2f2f2;
 }
 
-.card-history-img::before{
-    display: block;
-    content: '';
-    position: absolute;
-    top: 0rem;
-    right: 0rem;
-    left: 0rem;
-    bottom: -1rem;
-    z-index: 0;
-    background-color: transparent;
-    border: 1px solid white;
-    transform: rotate(6deg);
+.bg-step-3 {
+    background-color: #e2e2e2;
 }
 
-
-.card-history{
-    background-color: #000;
-    color: #fff;
-}
-
-.bg-step-1{
-    background-color:#FAFAFA;
-}
-
-.bg-step-2{
-    background-color:#F2F2F2;
-}
-
-.bg-step-3{
-    background-color:#E2E2E2;
-}
-
-.bg-step-1,.bg-step-2.bg-step-3{
+.bg-step-1,
+.bg-step-2.bg-step-3 {
     padding-top: 6rem !important;
     padding-bottom: 6rem !important;
 }
 
 .accordion-button::after {
-
     width: 1.25rem;
     height: 1.25rem;
-    background-image: url('../icons/add-icone.svg') !important;
-
+    background-image: url("../icons/add-icone.svg") !important;
 }
 
 .accordion-button:not(.collapsed)::after {
-    background-image: url('../icons/close-icone.svg') !important;
-
-
+    background-image: url("../icons/close-icone.svg") !important;
 }
 
 .accordion-button:not(.collapsed) {
     color: #000 !important;
     background-color: #e7f1ff;
     box-shadow: inset 0 -1px 0 #fff !important;
+}
+
+.swiper {
+    width: 100%;
+    height: 400px;
+}
+
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+}
+
+@media screen and (max-width: 427px) {
+    .menu-overlay-link {
+        font-size: 16px;
+    }
+
+    .menu-overlay .closebtn {
+        top: 1rem;
+        right: 1rem;
+    }
+
+    .menu-overlay-title {
+        display: none;
+    }
+
+    .p-ressource-about {
+        padding: 2rem !important;
+    }
+
+    .container-img-ressource-about {
+        width: 100%;
+        height: 450px;
+    }
+
+    .join-title {
+        font-size: 2rem !important;
+    }
+
+    .title-medium-circle {
+       display: none;
+    }
+
+    .title-big-circle {
+        top: -2rem !important;
+        right: -1rem !important;
+        height: 125px !important;
+    }
+
+    .title-small-circle {
+        bottom: 0rem !important;
+        right: -1rem !important;
+        height: 45px !important;
+    }
+
+    .container-title{
+        overflow: hidden !important;
+    }
+
+    .container-img-started-about {
+        width: 100%;
+        height: 400px;
+    }
+
+    .card-price {
+        width: 100%;
+        margin-bottom: 1.5rem;
+
+    }
+
+    .p-ressource-about-2 {
+        padding: 0.5rem !important;
+    }
+
+    .container-join-me {
+        padding: 1rem;
+    }
+
+    .container-about {
+        padding: 1rem;
+    }
+
+    .img-join-1, .img-join-2 {
+        width: 185px;
+        height: 185px;
+        object-fit: cover;
+    }
+
+    .img-join-2 {
+        position: absolute;
+        bottom: -7rem;
+        right: 6rem;
+    }
+
+    .m-join-ecom{
+        margin-bottom: 5rem;
+    }
+
+    .container-custom {
+        padding:1rem;
+    }
+
+    .img-news {
+        height: 40px;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+        width: 113px;
+    }
+
+    .news-small-circle {
+        top: 5rem;
+        left:5rem;
+        height: 30px;
+    }
+
+    .hero-image-container{
+        width: 100%;
+        height: 525px;
+    }
+
+    .hero-image{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .hero-title-block {
+        position: absolute;
+        bottom: 7%;
+        padding: 1.5rem !important;
+    }
+
+    .hero-see-more {
+        padding: 1rem ;
+        padding-top: 8rem;
+    }
+
+    .btn-wb-primary{
+        padding-top: 0.7rem !important;
+        padding-bottom: 0.7rem !important;
+
+    }
+
+
+}
+
+
+@media screen and (max-width:376px) {
+    .img-join-2 {
+        position: absolute;
+        bottom: -5rem;
+        right: 2rem;
+    }
+
+}
+
+@media screen and (max-width:321px) {
+    .img-join-2 {
+        position: absolute;
+        bottom: -5rem;
+        right: 0rem;
+    }
+
+}
+
+
+.card-history{
+    height:300px;
+    width:300px;
+    position:relative;
+
+}
+
+.card-history-container{
+    height:300px;
+    width:300px;
+    overflow:hidden;
+
+}
+
+.card-history-container img {
+    width:100%;
+    height:100%;
+    z-index:1000 !important;
+    position:relative;
+
+}
+
+.card-history::before{
+    content:'';
+    display:block;
+    position:absolute;
+    top:0rem;
+    left:0rem;
+    right:0rem;
+    bottom:0rem;
+    border:1px solid #fff;
+    z-index:0;
+    transform:rotate(6deg);
 }
