--- a/public/css/style.css
+++ b/public/css/style.css
@@ -532,6 +532,8 @@ body {
     border: none !important;
     border-radius: 0px !important;
     padding: 1rem;
+    overflow: hidden;
+
 }
 
 .card-price-header {
@@ -546,6 +548,15 @@ body {
     position: absolute;
     bottom: 0;
     padding: 2.5rem 1rem;
+    transition: all .5s ease;
+}
+
+.card-price-footer-link {
+    display: none;
+}
+
+.card-price-footer:hover .card-price-footer-link{
+    display: block;
 }
 
 .container-img-started-about {
@@ -665,6 +676,13 @@ body {
 }
 
 @media screen and (max-width: 427px) {
+    .card-price{
+        height: 450px !important;
+    }
+    .card-price-footer-link {
+        display: block !important;
+    }
+
     .menu-overlay-link {
         font-size: 16px;
     }
@@ -770,6 +788,7 @@ body {
     .hero-image-container {
         width: 100%;
         height: 525px;
+        position: relative;
     }
 
     .hero-image {
@@ -812,6 +831,30 @@ body {
         z-index: 1;
     }
 
+    .btn-wb-dark,.btn-wb-light {
+        height: 40px;
+        width: 40px;
+    }
+
+    .text-xs-start{
+        text-align: left;
+    }
+
+    .text-xs-center{
+        text-align: center;
+    }
+
+    .p-wb-4{
+        padding: 2rem !important;
+    }
+
+    .join-title-home{
+        font-size: 2.5rem !important;
+    }
+
+    .fs-m-16{
+        font-size: 14px !important;
+    }
 }
 
 @media screen and (max-width: 376px) {
@@ -899,4 +942,7 @@ body {
 
 .break-word{
     word-break: break-all;
+}
+.text-justify{
+    text-align: justify !important;
 }
